[build-system]
requires = ["hatchling (>=1.29.0,<2.0.0)", "hatch-vcs (>=0.5.0,<1.0.0)"]
build-backend = "hatchling.build"

[project]
name = "sevaht-utility"
dynamic = ["version"]
description = "General-purpose utilities, including typed CSV loading."
authors = [
    {name = "Jacob McIntosh", email = "nacitar.sevaht@gmail.com"}
]
readme = "README.md"
license = "Unlicense"
requires-python = ">=3.12"
keywords = [
    "csv", "dataclasses", "naming", "case-conversion", "type-hints",
    "utilities",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
dependencies = [
]

[dependency-groups]
dev = [
    "black (>=26.3.1,<27.0.0)",
    "build (>=1.4.2,<2.0.0)",
    "mypy (>=1.20.0,<2.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "ruff (>=0.15.8,<0.16.0)",
    "twine (>=6.2.0,<7.0.0)",
    "vulture (>=2.14,<3.0.0)",
]
docs = [
    "sphinx (>=8.1.0,<9.0.0)",
    "furo (>=2024.8.6)",
    "myst-parser (>=4.0.0,<5.0.0)",
]

[project.urls]
Homepage = "https://github.com/sevaht/sevaht-utility"
Documentation = "https://sevaht.github.io/sevaht-utility/"
Source = "https://github.com/sevaht/sevaht-utility"
Issues = "https://github.com/sevaht/sevaht-utility/issues"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/sevaht_utility"]

[tool.hatch.build.targets.sdist]
# Allowlist so dev/local files (.claude, checks, test-publish.sh, .github, ...)
# never leak into a published sdist. pyproject.toml/PKG-INFO/README/.gitignore
# are force-included by hatchling regardless.
include = ["/src", "/tests", "/LICENSE"]

[tool.black]
line-length = 79
skip-magic-trailing-comma = true

[tool.mypy]
strict = true
exclude = ["^docs/"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 79
extend-exclude = ["docs"]

[tool.ruff.lint]
extend-ignore = ["COM812", "COM819", "E203", "E501", "TD003"]
select = [
    "A", "ANN", "ARG", "ASYNC", "B", "BLE", "C4", "C90", "COM",
    "DTZ", "E", "EM", "ERA", "F", "FA", "FLY", "FURB", "I",
    "ISC", "LOG", "N", "PERF", "PGH", "PIE", "PLR", "PLW", "PTH",
    "Q", "RET", "RSE", "RUF", "S", "SIM", "TC", "TCH", "TD",
    "TID", "TRY", "UP"
]

[tool.ruff.lint.per-file-ignores]
"checks" = ["S603"]
"tests/**/*" = ["PLR2004", "S101"]

[tool.vulture]
# This is a library: public API surface looks "unused" to vulture since
# nothing in-repo calls it, which is the false positive vulture's own docs
# tell you to address by raising min_confidence rather than whitelisting.
min_confidence = 70
# Fixture functions whose unused, literally-named parameters are the point
# of the test (asserting on extracted hint names like "a", "b", "c").
exclude = ["tests/test_hinting.py"]
